# Tactile-Pad-Project

./: .gitignore  README.md  app.py  braille.py  fake_board.py  image_pipeline.py  index.html  project_final_report.md  project_progress.md  project_proposal.md  pyproject.toml  requirements.txt  serial_test.py  style.css
deploy/: tactile.env  tactile.env.example  tactile.service
pico/: LED_board.py  hw_smoke_ws2812.py  led_test.py  pico_LED_braille.py  pico_server.py  pico_ws2812_receiver.py  serial_receiver.py
scripts/: mac_board_bridge.py  serial_test.py  ws2812_diag.py
src/tactile/: __init__.py  __main__.py  app.py  board_transport.py  braille.py  image_pipeline.py  serial_board.py  ws2812_matrix.py  ws2812_serial_board.py
src/tactile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: style.css
templates/: index.html
