[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile"
version = "0.1.0"
description = "Braille display web UI and Raspberry Pi Pico integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "werkzeug>=3.0",
    "pyserial>=3.5",
    "mpremote>=1.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["pico"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
